# seaweedfs-s3-trial

./: 1_s3_write_bucket.py  2_s3_upload_download.py  3_mlflow_test.py  README.md  docker-compose.yaml  pyproject.toml
mlruns/0/: meta.yaml
mlruns/587785263722309128/: meta.yaml
mlruns/587785263722309128/33dcd93c6ccd4bdd84d1c0d721f8cdbb/: meta.yaml
mlruns/587785263722309128/33dcd93c6ccd4bdd84d1c0d721f8cdbb/tags/: mlflow.log-model.history  mlflow.runName  task
mlruns/587785263722309128/77f315a1d74a4500a6875c2c17fd8de5/: meta.yaml
mlruns/587785263722309128/77f315a1d74a4500a6875c2c17fd8de5/tags/: mlflow.runName  mlflow.source.name
mlruns/587785263722309128/b639394f2a854245bd988c900802e016/: meta.yaml
mlruns/587785263722309128/b639394f2a854245bd988c900802e016/tags/: mlflow.log-model.history  mlflow.runName
mlruns/587785263722309128/ea1778c703304c139f87716dab25c091/: meta.yaml
mlruns/587785263722309128/ea1778c703304c139f87716dab25c091/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/models/linear_reg/: meta.yaml
mlruns/models/linear_reg/version-1/: meta.yaml
mlruns/models/linear_reg/version-2/: meta.yaml
scripts/: mlflow.sh
