[tool.poetry]
name = "seaweedfs-s3-trial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"
botocore = "^1.34.60"
boto3 = "^1.34.60"
mlflow = "^2.11.1"
pandas = "^2.2.1"
numpy = "^1.26.4"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
